Atualizado pacman.ini

--- a/pacotes/pacman.ini
+++ b/pacotes/pacman.ini
@@ -25,6 +25,20 @@ config_apparmor() {
 	sudo systemctl status apparmor.service --no-pager
 }
 
+atualizar_cache_icones() {
+  log_info "Atualizando cache de temas de ícones disponíveis..."
+
+  for dir in /usr/share/icons/*; do
+    if [ -d "$dir" ] && [ -f "$dir/index.theme" ]; then
+      gtk-update-icon-cache -f "$dir" && \
+      echo "✅ Cache atualizado: $dir" || \
+      echo "⚠️ Erro ao atualizar: $dir"
+    fi
+  done
+
+  log_info "Finalizado a atualização do cache de ícones."
+}
+
 config_flameshot() {
 	log_info "Configurando Flameshot..."
 	sudo pacman --noconfirm -R xf86-video-intel
@@ -39,6 +53,7 @@ config_flameshot() {
 
 config_icon_obsidian() {
 	log_info "Aplicando tema de ícones Obsidian..."
+	atualizar_cache_icones
 	gsettings set org.gnome.desktop.interface icon-theme "Obsidian-Aqua-Light"
 	sudo -u gdm dbus-launch gsettings set org.gnome.desktop.interface icon-theme "Obsidian-Aqua-Light"
 }
@@ -52,13 +67,16 @@ config_orchis_theme() {
 	log_info "Aplicando tema Orchis..."
 	gsettings set org.gnome.shell.extensions.user-theme name "Orchis-Dark-Compact"
 	gsettings set org.gnome.desktop.interface gtk-theme "Orchis-Dark-Compact"
-	gsettings set org.gnome.desktop.interface icon-theme "Orchis-Dark-Compact"
 	sudo -u gdm dbus-launch gsettings set org.gnome.desktop.interface gtk-theme "Orchis-Dark-Compact"
+
+	atualizar_cache_icones
+	gsettings set org.gnome.desktop.interface icon-theme "Orchis-Dark-Compact"
 	sudo -u gdm dbus-launch gsettings set org.gnome.desktop.interface icon-theme "Orchis-Dark-Compact"
 }
 
 config_tela_icon() {
 	log_info "Aplicando ícones Tela..."
+	atualizar_cache_icones
 	gsettings set org.gnome.desktop.interface icon-theme "Tela-circle-black"
 	sudo -u gdm dbus-launch gsettings set org.gnome.desktop.interface icon-theme "Tela-circle-black"
 }
@@ -132,6 +150,8 @@ config_yaru() {
 		log_aviso "gsettings não está disponível. Pulando configuração Yaru."
 		return
 	fi
+
+	atualizar_cache_icones
 
 	if gsettings writable org.gnome.desktop.interface gtk-theme; then
 		gsettings set org.gnome.desktop.interface gtk-theme "Yaru-dark"
