Corrigido parametro pacman.ini

--- a/pacotes/pacman.ini
+++ b/pacotes/pacman.ini
@@ -26,17 +26,17 @@ config_apparmor() {
 }
 
 atualizar_cache_icones() {
-  log_info "Atualizando cache de temas de ícones disponíveis..."
+	log_info "Atualizando cache de temas de ícones disponíveis..."
 
-  for dir in /usr/share/icons/*; do
-    if [ -d "$dir" ] && [ -f "$dir/index.theme" ]; then
-      gtk-update-icon-cache -f "$dir" && \
-      echo "✅ Cache atualizado: $dir" || \
-      echo "⚠️ Erro ao atualizar: $dir"
-    fi
-  done
+	for dir in /usr/share/icons/*; do
+		if [ -d "$dir" ] && [ -f "$dir/index.theme" ]; then
+			sudo gtk-update-icon-cache -f "$dir" &&
+				echo "Cache atualizado: $dir" ||
+				echo "Erro ao atualizar: $dir"
+		fi
+	done
 
-  log_info "Finalizado a atualização do cache de ícones."
+	log_info "Finalizado a atualização do cache de ícones."
 }
 
 config_flameshot() {
