--- a/pacotes/pacman.ini
+++ b/pacotes/pacman.ini
@@ -53,7 +53,7 @@ config_flameshot() {
 
 config_icon_obsidian() {
 	log_info "Aplicando tema de ícones Obsidian..."
-	atualizar_cache_icones >/tmp/cache_icones
+	atualizar_cache_icones &>/tmp/cache_icones
 	gsettings set org.gnome.desktop.interface icon-theme "Obsidian-Aqua-Light"
 	dconf write /org/gnome/desktop/interface/icon-theme "'Obsidian-Aqua-Light'"
 	sudo -u gdm dbus-launch gsettings set org.gnome.desktop.interface icon-theme "Obsidian-Aqua-Light"
@@ -70,7 +70,7 @@ config_orchis_theme() {
 	gsettings set org.gnome.desktop.interface gtk-theme "Orchis-Dark-Compact"
 	sudo -u gdm dbus-launch gsettings set org.gnome.desktop.interface gtk-theme "Orchis-Dark-Compact"
 
-	atualizar_cache_icones >/tmp/cache_icones
+	atualizar_cache_icones &>/tmp/cache_icones
 	gsettings set org.gnome.desktop.interface icon-theme "Orchis-Dark-Compact"
 	dconf write /org/gnome/desktop/interface/icon-theme "'Orchis-Dark-Compact'"
 	sudo -u gdm dbus-launch gsettings set org.gnome.desktop.interface icon-theme "Orchis-Dark-Compact"
@@ -78,7 +78,7 @@ config_orchis_theme() {
 
 config_tela_icon() {
 	log_info "Aplicando ícones Tela..."
-	atualizar_cache_icones >/tmp/cache_icones
+	atualizar_cache_icones &>/tmp/cache_icones
 	gsettings set org.gnome.desktop.interface icon-theme "Tela-circle-black"
 	dconf write /org/gnome/desktop/interface/icon-theme "'Tela-circle-black'"
 	sudo -u gdm dbus-launch gsettings set org.gnome.desktop.interface icon-theme "Tela-circle-black"
@@ -154,7 +154,7 @@ config_yaru() {
 		return
 	fi
 
-	atualizar_cache_icones >/tmp/cache_icones
+	atualizar_cache_icones &>/tmp/cache_icones
 
 	if gsettings writable org.gnome.desktop.interface gtk-theme; then
 		gsettings set org.gnome.desktop.interface gtk-theme "Yaru-dark"
