Atualizado pacman.ini

--- a/pacotes/pacman.ini
+++ b/pacotes/pacman.ini
@@ -41,7 +41,7 @@ atualizar_cache_icones() {
 
 config_flameshot() {
 	log_info "Configurando Flameshot..."
-	sudo pacman --noconfirm -R xf86-video-intel
+	pacman -Qs xf86-video-intel && sudo pacman --noconfirm -R xf86-video-intel
 	sudo pacman --needed --noconfirm -S $(pacman-optdepends -c flameshot)
 	sudo mkdir -p /etc/skel/.local/share/applications
 	mkdir -p "$HOME/.local/share/applications"
