atualizado pacman.ini

--- a/pacotes/pacman.ini
+++ b/pacotes/pacman.ini
@@ -30,12 +30,13 @@ atualizar_cache_icones() {
 
 	for dir in /usr/share/icons/*; do
 		if [ -d "$dir" ] && [ -f "$dir/index.theme" ]; then
-			sudo gtk-update-icon-cache -f "$dir" &&
-				echo "Cache atualizado: $dir" ||
-				echo "Erro ao atualizar: $dir"
+			sudo gtk-update-icon-cache -f "$dir" #&&
+				# echo "Cache atualizado: $dir" ||
+				# echo "Erro ao atualizar: $dir"
 		fi
 	done
 
+	sleep 5
 	log_info "Finalizado a atualização do cache de ícones."
 }
 
@@ -53,7 +54,7 @@ config_flameshot() {
 
 config_icon_obsidian() {
 	log_info "Aplicando tema de ícones Obsidian..."
-	atualizar_cache_icones &>/tmp/cache_icones
+	atualizar_cache_icones
 	gsettings set org.gnome.desktop.interface icon-theme "Obsidian-Aqua-Light"
 	dconf write /org/gnome/desktop/interface/icon-theme "'Obsidian-Aqua-Light'"
 	sudo -u gdm dbus-launch gsettings set org.gnome.desktop.interface icon-theme "Obsidian-Aqua-Light"
@@ -70,7 +71,7 @@ config_orchis_theme() {
 	gsettings set org.gnome.desktop.interface gtk-theme "Orchis-Dark-Compact"
 	sudo -u gdm dbus-launch gsettings set org.gnome.desktop.interface gtk-theme "Orchis-Dark-Compact"
 
-	atualizar_cache_icones &>/tmp/cache_icones
+	atualizar_cache_icones
 	gsettings set org.gnome.desktop.interface icon-theme "Orchis-Dark-Compact"
 	dconf write /org/gnome/desktop/interface/icon-theme "'Orchis-Dark-Compact'"
 	sudo -u gdm dbus-launch gsettings set org.gnome.desktop.interface icon-theme "Orchis-Dark-Compact"
@@ -78,7 +79,7 @@ config_orchis_theme() {
 
 config_tela_icon() {
 	log_info "Aplicando ícones Tela..."
-	atualizar_cache_icones &>/tmp/cache_icones
+	atualizar_cache_icones
 	gsettings set org.gnome.desktop.interface icon-theme "Tela-circle-black"
 	dconf write /org/gnome/desktop/interface/icon-theme "'Tela-circle-black'"
 	sudo -u gdm dbus-launch gsettings set org.gnome.desktop.interface icon-theme "Tela-circle-black"
@@ -154,7 +155,7 @@ config_yaru() {
 		return
 	fi
 
-	atualizar_cache_icones &>/tmp/cache_icones
+	atualizar_cache_icones
 
 	if gsettings writable org.gnome.desktop.interface gtk-theme; then
 		gsettings set org.gnome.desktop.interface gtk-theme "Yaru-dark"
