--- a/pacotes/pacman.ini
+++ b/pacotes/pacman.ini
@@ -30,9 +30,9 @@ atualizar_cache_icones() {
 
 	for dir in /usr/share/icons/*; do
 		if [ -d "$dir" ] && [ -f "$dir/index.theme" ]; then
-			sudo gtk-update-icon-cache -f "$dir" #&&
-				# echo "Cache atualizado: $dir" ||
-				# echo "Erro ao atualizar: $dir"
+			sudo gtk-update-icon-cache -f "$dir" &>>/dev/null #&&
+			# echo "Cache atualizado: $dir" ||
+			# echo "Erro ao atualizar: $dir"
 		fi
 	done
 
@@ -54,10 +54,23 @@ config_flameshot() {
 
 config_icon_obsidian() {
 	log_info "Aplicando tema de ícones Obsidian..."
+
 	atualizar_cache_icones
+
+	# Detecta DBUS da sessão atual
+	export DBUS_SESSION_BUS_ADDRESS="unix:path=/run/user/$(id -u)/bus"
+
+	# Aplica o tema via gsettings
 	gsettings set org.gnome.desktop.interface icon-theme "Obsidian-Aqua-Light"
-	dconf write /org/gnome/desktop/interface/icon-theme "'Obsidian-Aqua-Light'"
 	sudo -u gdm dbus-launch gsettings set org.gnome.desktop.interface icon-theme "Obsidian-Aqua-Light"
+
+	# Verifica se foi aplicado corretamente
+	atual=$(gsettings get org.gnome.desktop.interface icon-theme)
+	if [[ "$atual" == "'Obsidian-Aqua-Light'" ]]; then
+		log_info "Tema de ícones aplicado com sucesso: $atual"
+	else
+		log_warn "Tema não foi aplicado corretamente. Atual: $atual"
+	fi
 }
 
 config_kernel_hook() {
@@ -66,23 +79,50 @@ config_kernel_hook() {
 }
 
 config_orchis_theme() {
+	log_info "Aplicando tema de ícones Orchis..."
+
+	atualizar_cache_icones
+
+	# Detecta DBUS da sessão atual
+	export DBUS_SESSION_BUS_ADDRESS="unix:path=/run/user/$(id -u)/bus"
+
+	# Aplica o tema via gsettings
+	gsettings set org.gnome.desktop.interface icon-theme "Orchis-Dark-Compact"
+	sudo -u gdm dbus-launch gsettings set org.gnome.desktop.interface icon-theme "Orchis-Dark-Compact"
+
+	# Verifica se foi aplicado corretamente
+	atual=$(gsettings get org.gnome.desktop.interface icon-theme)
+	if [[ "$atual" == "'Orchis-Dark-Compact'" ]]; then
+		log_info "Tema de ícones aplicado com sucesso: $atual"
+	else
+		log_warn "Tema não foi aplicado corretamente. Atual: $atual"
+	fi
+
 	log_info "Aplicando tema Orchis..."
 	gsettings set org.gnome.shell.extensions.user-theme name "Orchis-Dark-Compact"
 	gsettings set org.gnome.desktop.interface gtk-theme "Orchis-Dark-Compact"
 	sudo -u gdm dbus-launch gsettings set org.gnome.desktop.interface gtk-theme "Orchis-Dark-Compact"
-
-	atualizar_cache_icones
-	gsettings set org.gnome.desktop.interface icon-theme "Orchis-Dark-Compact"
-	dconf write /org/gnome/desktop/interface/icon-theme "'Orchis-Dark-Compact'"
-	sudo -u gdm dbus-launch gsettings set org.gnome.desktop.interface icon-theme "Orchis-Dark-Compact"
 }
 
 config_tela_icon() {
 	log_info "Aplicando ícones Tela..."
+
 	atualizar_cache_icones
+
+	# Detecta DBUS da sessão atual
+	export DBUS_SESSION_BUS_ADDRESS="unix:path=/run/user/$(id -u)/bus"
+
+	# Aplica o tema via gsettings
 	gsettings set org.gnome.desktop.interface icon-theme "Tela-circle-black"
-	dconf write /org/gnome/desktop/interface/icon-theme "'Tela-circle-black'"
 	sudo -u gdm dbus-launch gsettings set org.gnome.desktop.interface icon-theme "Tela-circle-black"
+
+	# Verifica se foi aplicado corretamente
+	atual=$(gsettings get org.gnome.desktop.interface icon-theme)
+	if [[ "$atual" == "'Tela-circle-black'" ]]; then
+		log_info "Tema de ícones aplicado com sucesso: $atual"
+	else
+		log_warn "Tema não foi aplicado corretamente. Atual: $atual"
+	fi
 }
 
 config_vimix_cursor() {
