--- a/pacotes/pacman.ini
+++ b/pacotes/pacman.ini
@@ -97,6 +97,7 @@ config_orchis_theme() {
 	else
 		log_warn "Tema não foi aplicado corretamente. Atual: $atual"
 	fi
+	atualizar_cache_icones
 
 	log_info "Aplicando tema Orchis..."
 	gsettings set org.gnome.shell.extensions.user-theme name "Orchis-Dark-Compact"
