Corrigido pacotes de ícones e GDM

--- a/pacotes/pacman.ini
+++ b/pacotes/pacman.ini
@@ -79,26 +79,6 @@ config_kernel_hook() {
 }
 
 config_orchis_theme() {
-	log_info "Aplicando tema de ícones Orchis..."
-
-	atualizar_cache_icones
-
-	# Detecta DBUS da sessão atual
-	export DBUS_SESSION_BUS_ADDRESS="unix:path=/run/user/$(id -u)/bus"
-
-	# Aplica o tema via gsettings
-	gsettings set org.gnome.desktop.interface icon-theme "Orchis-Dark-Compact"
-	sudo -u gdm dbus-launch gsettings set org.gnome.desktop.interface icon-theme "Orchis-Dark-Compact"
-
-	# Verifica se foi aplicado corretamente
-	atual=$(gsettings get org.gnome.desktop.interface icon-theme)
-	if [[ "$atual" == "'Orchis-Dark-Compact'" ]]; then
-		log_info "Tema de ícones aplicado com sucesso: $atual"
-	else
-		log_warn "Tema não foi aplicado corretamente. Atual: $atual"
-	fi
-	atualizar_cache_icones
-
 	log_info "Aplicando tema Orchis..."
 	gsettings set org.gnome.shell.extensions.user-theme name "Orchis-Dark-Compact"
 	gsettings set org.gnome.desktop.interface gtk-theme "Orchis-Dark-Compact"
@@ -188,6 +168,54 @@ config_xboxdrv() {
 	sudo systemctl enable --now xboxdrv.service
 }
 
+config_icon_yaru() {
+	if ! command -v gsettings &>/dev/null; then
+		log_aviso "gsettings não está disponível. Pulando configuração Yaru."
+		return
+	fi
+	
+	log_info "Aplicando tema de ícones Yaru..."
+
+	atualizar_cache_icones
+
+	# Detecta DBUS da sessão atual
+	export DBUS_SESSION_BUS_ADDRESS="unix:path=/run/user/$(id -u)/bus"
+
+	# Aplica o tema via gsettings ou dconf
+	if gsettings writable org.gnome.desktop.interface icon-theme; then
+		gsettings set org.gnome.desktop.interface icon-theme "Yaru-blue-dark"
+	elif command -v dconf &>/dev/null; then
+		dconf write /org/gnome/desktop/interface/icon-theme "'Yaru-blue-dark'"
+	fi
+
+	if [ -n "$(pgrep gdm)" ]; then
+		sudo -u gdm dbus-launch gsettings set org.gnome.desktop.interface icon-theme "Yaru-blue-dark" 2>/dev/null || true
+	fi
+
+	# Verifica se foi aplicado corretamente
+	atual=$(gsettings get org.gnome.desktop.interface icon-theme)
+	if [[ "$atual" == "'Yaru-blue-dark'" ]]; then
+		log_info "Tema de ícones aplicado com sucesso: $atual"
+	else
+		log_warn "Tema não foi aplicado corretamente. Atual: $atual"
+	fi
+}
+
+config_sound_yaru() {
+	if ! command -v gsettings &>/dev/null; then
+		log_aviso "gsettings não está disponível. Pulando configuração Yaru."
+		return
+	fi
+	
+	log_info "Aplicando tema de som Yaru..."
+
+	if gsettings writable org.gnome.desktop.sound theme-name; then
+		gsettings set org.gnome.desktop.sound theme-name "Yaru"
+	elif command -v dconf &>/dev/null; then
+		dconf write /org/gnome/desktop/sound/theme-name "'Yaru'"
+	fi
+}
+
 config_yaru() {
 	log_info "Aplicando tema Yaru..."
 
@@ -195,8 +223,6 @@ config_yaru() {
 		log_aviso "gsettings não está disponível. Pulando configuração Yaru."
 		return
 	fi
-
-	atualizar_cache_icones
 
 	if gsettings writable org.gnome.desktop.interface gtk-theme; then
 		gsettings set org.gnome.desktop.interface gtk-theme "Yaru-dark"
@@ -210,21 +236,8 @@ config_yaru() {
 		dconf write /org/gnome/shell/extensions/user-theme/name "'Yaru-dark'"
 	fi
 
-	if gsettings writable org.gnome.desktop.interface icon-theme; then
-		gsettings set org.gnome.desktop.interface icon-theme "Yaru-blue-dark"
-	elif command -v dconf &>/dev/null; then
-		dconf write /org/gnome/desktop/interface/icon-theme "'Yaru-blue-dark'"
-	fi
-
-	if gsettings writable org.gnome.desktop.sound theme-name; then
-		gsettings set org.gnome.desktop.sound theme-name "Yaru"
-	elif command -v dconf &>/dev/null; then
-		dconf write /org/gnome/desktop/sound/theme-name "'Yaru'"
-	fi
-
 	if [ -n "$(pgrep gdm)" ]; then
 		sudo -u gdm dbus-launch gsettings set org.gnome.desktop.interface gtk-theme "Yaru-dark" 2>/dev/null || true
-		sudo -u gdm dbus-launch gsettings set org.gnome.desktop.interface icon-theme "Yaru-blue-dark" 2>/dev/null || true
 	fi
 }
 
@@ -255,7 +268,9 @@ declare -A CONFIGURACOES_PACOTES=(
 	[config_snapd]="snapd"
 	[config_actions_nautilus]="actions-for-nautilus-git"
 	[config_xboxdrv]="xboxdrv"
-	[config_yaru]="yaru-gnome-shell-theme yaru-gtk-theme yaru-metacity-theme yaru-session yaru-icon-theme yaru-sound-theme"
+	[config_yaru]="yaru-gnome-shell-theme yaru-gtk-theme yaru-metacity-theme yaru-session"
+	[config_icon_yaru]="yaru-icon-theme"
+	[config_sound_yaru]="yaru-sound-theme"
 	[config_zapzap]="zapzap"
 )
 
