Adição e atualização de scripts

--- a/pacotes/pacman.ini
+++ b/pacotes/pacman.ini
@@ -40,6 +40,15 @@ atualizar_cache_icones() {
 	log_info "Finalizado a atualização do cache de ícones."
 }
 
+app-picker-layout() {
+# Restaura o layout padrão da menu de aplicativos (app-picker) do GNOME.
+# Remove alterações personalizadas e reorganiza os ícones em categorias padrão.
+xdg-desktop-menu forceupdate
+update-desktop-database ~/.local/share/applications
+gsettings reset org.gnome.shell app-picker-layout
+dconf reset -f /org/gnome/shell/app-picker-layout/
+}
+
 config_flameshot() {
 	log_info "Configurando Flameshot..."
 	pacman -Qs xf86-video-intel && sudo pacman --noconfirm -R xf86-video-intel
@@ -284,5 +293,7 @@ for funcao in "${!CONFIGURACOES_PACOTES[@]}"; do
 		fi
 	done
 done
+
+app-picker-layout
 
 log_sucesso "Todas as configurações foram aplicadas!"
