Adicionado categoria Desenvolvimento e modificado  tema circle

--- a/pacotes/pacman.ini
+++ b/pacotes/pacman.ini
@@ -103,12 +103,12 @@ config_tela_icon() {
 	export DBUS_SESSION_BUS_ADDRESS="unix:path=/run/user/$(id -u)/bus"
 
 	# Aplica o tema via gsettings
-	gsettings set org.gnome.desktop.interface icon-theme "Tela-circle-black"
-	sudo -u gdm dbus-launch gsettings set org.gnome.desktop.interface icon-theme "Tela-circle-black"
+	gsettings set org.gnome.desktop.interface icon-theme "Tela-circle-dark"
+	sudo -u gdm dbus-launch gsettings set org.gnome.desktop.interface icon-theme "Tela-circle-dark"
 
 	# Verifica se foi aplicado corretamente
 	atual=$(gsettings get org.gnome.desktop.interface icon-theme)
-	if [[ "$atual" == "'Tela-circle-black'" ]]; then
+	if [[ "$atual" == "'Tela-circle-dark'" ]]; then
 		log_info "Tema de ícones aplicado com sucesso: $atual"
 	else
 		log_warn "Tema não foi aplicado corretamente. Atual: $atual"
